@@ -1,3 +1,11 @@
+2025-06-02  Kevin Ushey  <kevinushey@gmail.com>
+
+	* inst/include/Rcpp.h: Avoid copy when creating Language objects
+	* inst/include/Rcpp/Language.h: Idem
+	* inst/include/Rcpp/lgrow.h: Idem
+	* inst/tinytest/cpp/language.cpp: Idem
+	* inst/tinytest/test_language.R: Idem
+
 2025-05-27  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version and date
